# MLab

./: .env.example  .gitignore  AGENTS.md  HANDOFF_PLAN.md  Makefile  PROJECT_PLAN.md  README.md  compose.yaml  design-qa.md  implementation_plan.md  task.md  walkthrough.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 359039e39387_add_assistant_knowledge_files.py  50b34180333d_add_vector_memory_retrieval.py  5d2b8cebb390_add_tool_executions_and_message_.py  8f1d6e7a2c41_add_assistant_opening_message.py  a6acff34fab8_initial_schema.py
backend/app/: __init__.py  main.py  worker.py
backend/app/ai/: __init__.py  provider.py  runtime.py
backend/app/api/: deps.py
backend/app/api/v1/: assistants.py  auth.py  conversations.py  documents.py  files.py  memories.py  model_settings.py  resources.py  search.py  tasks.py  tools.py  users.py
backend/app/core/: config.py  errors.py  rate_limit.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: entities.py
backend/app/schemas/: __init__.py  auth.py  common.py  content.py  models.py
backend/app/services/: chat.py  completion.py  memory.py  tools.py
backend/app/tasks/: queue.py
backend/tests/: conftest.py  test_ai_features.py  test_auth.py  test_business.py  test_memory.py
frontend/: .env.development  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: npm-connect-proxy.mjs  npm-connect-proxy.py  npm-curl-registry.py
(+35 files in other folders)
