[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlab-api"
version = "0.1.0"
description = "MLab AI workspace API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "arq>=0.26,<1",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  "cryptography>=43,<46",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "orjson>=3.10,<4",
  "pgvector>=0.3,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "pwdlib[argon2]>=0.2,<1",
  "pyjwt>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "redis>=5,<6",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<6",
  "ruff>=0.7,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
